<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_activity_tv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/mainBackgroundColor"
    tools:context=".ui.detail.movie.DetailMovieActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:collapsedTitleTextAppearance="@style/TitleItem"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <ImageView
                android:id="@+id/img_backdroup_tv"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/cd_image_backdroup"
                android:src="@color/colorAccent"
                android:scaleType="fitXY"
                app:layout_collapseMode="parallax" />
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tb_title_tv"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="Title Tv"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:layout_collapseMode="pin"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="8dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/img_poster_tv"
                    android:layout_width="154dp"
                    android:layout_height="175dp"
                    android:contentDescription="@string/cd_image_poster"
                    android:scaleType="fitXY"
                    android:src="@color/colorAccent" />
            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/img_ic_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:src="@drawable/live_tv_24"
                app:layout_constraintStart_toEndOf="@+id/cv_image"
                app:layout_constraintTop_toTopOf="@+id/cv_image"
                tools:ignore="contentDescription"/>

            <ImageView
                android:id="@+id/img_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_baseline_star_24"
                app:layout_constraintStart_toEndOf="@+id/cv_image"
                app:layout_constraintTop_toBottomOf="@+id/img_ic_tv"
                tools:ignore="contentDescription" />

            <TextView
                android:id="@+id/tv_vote_tv"
                style="@style/TextContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vote_10"
                android:textSize="22sp"
                app:layout_constraintStart_toEndOf="@+id/img_start"
                app:layout_constraintTop_toTopOf="@+id/img_start" />

            <ImageView
                android:id="@+id/img_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/date_range_24"
                app:layout_constraintStart_toEndOf="@+id/cv_image"
                app:layout_constraintTop_toBottomOf="@id/tv_vote_tv"
                tools:ignore="contentDescription" />

            <TextView
                android:id="@+id/tv_release_tv"
                style="@style/TextContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date"
                android:textSize="22sp"
                app:layout_constraintStart_toEndOf="@+id/img_date_tv"
                app:layout_constraintTop_toTopOf="@id/img_date_tv"/>

            <TextView
                android:id="@+id/tv_title_tv"
                style="@style/TitleItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                tools:text="Titel TvShow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_image" />


            <TextView
                android:id="@+id/tv_overview"
                style="@style/TextContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/overview"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_tv" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/mainBackgroundColor2"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview">

                <TextView
                    android:id="@+id/tv_detail_tv"
                    style="@style/TextContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    tools:text="@string/dummy_detail"
                    android:textAlignment="gravity" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/created"
                style="@style/TextContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/created_by"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
                android:id="@+id/rv_creator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/created"
                app:msrv_gravity="start"
                app:msrv_interval="1"
                app:msrv_speed_ms_per_inch="120" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>